--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,3 @@
-name: CI
 on:
   push:
     branches: [master]
@@ -7,6 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - run: gem install bundler
       - run: bundle install
       - run: bundle exec rake
       - uses: peaceiris/actions-gh-pages@v3
