--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: gem install bundler
+      - uses: ruby/setup-ruby@v1
       - run: bundle install
       - run: bundle exec rake
       - uses: peaceiris/actions-gh-pages@v3
