--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - run: sudo apt-get install graphviz
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
       - run: bundle install
