--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,8 +8,7 @@ jobs:
       - run: sudo apt-get install graphviz
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
-      - run: bundle install
-      - run: bundle exec rake
+      - run: bundle install && bundle exec rake
       - uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
